<resources>
    <string name="app_name">One swipe to switch</string>
    <string name="unit_id">ca-app-pub-5616229813369025~2393725405</string>
    <string name="ad_fullscreen">ca-app-pub-5616229813369025/5543467076</string>
    <string name="ad_native1">ca-app-pub-5616229813369025/2657626899</string>
    <string name="ad_native2">ca-app-pub-5616229813369025/4027506745</string>
    <string name="ad_banner1">ca-app-pub-5616229813369025/4194371169</string>
    <string name="common">Common</string>
    <string name="blacklist">App blacklist</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="allow_drag">Allow drag</string>
    <string name="darkening_behind">Darkening behind</string>
    <string name="transition_animation">Transition animation between apps</string>
    <string name="vibration">Haptic feedback on trigger</string>
    <string name="avoid_keyboard">Avoid keyboard overlapping</string>
    <string name="choose_color">Choose color</string>
    <string name="make_invisible">Make invisible</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="button_hide">Hide</string>
    <string name="start_service">Launch</string>
    <string name="grant">Grant</string>
    <string-array name="appOrder">
        <item>Direct</item>
        <item>Reverse</item>
    </string-array>
    <string-array name="appLayout">
        <item>Vertical</item>
        <item>Horizontal</item>
    </string-array>
    <string-array name="app_ver_anim">
        <item>From left to right</item>
        <item>From right to left</item>
        <item>Emerging</item>
    </string-array>
    <string-array name="app_hor_anim">
        <item>Bottom up</item>
        <item>Top down</item>
        <item>Emerging</item>
    </string-array>
    <string-array name="button_positions">
        <item>Bottom</item>
        <item>Right</item>
        <item>Left</item>
    </string-array>
    <string name="usage_access_permission">Usage access permission is needed to get recent tasks</string>
    <string name="overlay_permission">Overlay permission is needed to show floating button</string>
    <string name="message_hide_notifications">For this app to stay active in the background needs notification. You may hide it by tapping and holding the notification and selecting "Block all notifications".</string>
    <string name="title_notification">Notification</string>
    <string name="floating_button">Floating button</string>
    <string name="app_bar">App bar</string>
    <string name="thickness_param">Thickness</string>
    <string name="length_param">Length</string>
    <string name="position">Position</string>
    <string name="app_count">App count</string>
    <string name="app_icon_size">App icon size</string>
    <string name="app_order">Order of apps</string>
    <string name="app_layout">Layout of apps</string>
    <string name="app_appear_animation">Appearance animation of app list</string>
    <string name="how_to_use">How to use</string>
    <string name="how_to_use_explanation">You have a floating button and an app bar. To get the app bar to appear you need to touch the floating button and then swipe your finger. To switch between apps you need to get the app bar to appear then move your finger to any app icon of the app bar and take you finger off the screen.</string>
</resources>
