<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsContainer"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:id="@+id/properties">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:id="@+id/topPadding">
            <!--<com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adViewTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adUnitId="@string/ad_native1"
                ads:adSize="FULL_WIDTHx300">
            </com.google.android.gms.ads.NativeExpressAdView> -->

        </LinearLayout>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:id="@+id/startService"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:gravity="right|center_vertical"
            android:textSize="15dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/floating_button"
            android:padding="5dp"
            android:background="@color/separator"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/allow_drag"
            android:id="@+id/dragFloatindButton"
            android:textOff="@string/off"
            android:textOn="@string/on" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/width_param"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/widthpanel"
            android:progress="5"
            android:max="100"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/height_param"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/heightpanel"
            android:progress="5"
            android:max="100"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/butChooseColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color"/>
        <Button
            android:id="@+id/butTransparentColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_transparent_color"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/floating_button_sweep_direction"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/SweepDirection" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:background="@color/separator"
            android:text="@string/app_bar"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/allow_drag"
            android:id="@+id/dragAppPanel"
            android:textOff="@string/off"
            android:textOn="@string/on"  />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/app_count"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/AppCount"
            android:progress="4"
            android:max="9"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/app_icon_size"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/AppIconSize"
            android:progress="5"
            android:max="100"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/transition_animation"
            android:checked="true"
            android:id="@+id/enableAnimation"
            android:textOff="@string/off"
            android:textOn="@string/on" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/app_order"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/AppOrder" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/app_layout"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/AppLayout" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/separator"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:text="@string/app_appear_animation"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/AppAnim" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            android:id="@+id/bottomPadding">
           <!-- <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adViewBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adUnitId="@string/ad_native2"
                ads:adSize="FULL_WIDTHx300">
            </com.google.android.gms.ads.NativeExpressAdView> -->

          <!--  <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/ad_banner1">
            </com.google.android.gms.ads.AdView> -->

        </LinearLayout>
    </LinearLayout>

    </ScrollView>